0.6.1
-----

* sax2html handles empty attributes in HTML now, so that <option selected>
  gets turned into <option selected="selected">

0.6
---

* in Silva subset, accept nested <b>, <i> and <a href=""> in those.

* Allow optional filtering handler that events get passed through before
  import happens.
 
0.5.1
-----

* In silva subset, treat \n as <br>

* In html2sax, we're now making sure that any tags that cannot be singletons
  in HTML are kept open, by adding an extra space character event.

0.5
---

Initial public release.